# snpe-yolov7-inference

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp  template.cpp
cfg/: config.json
client/: gst-client.sh
client/streaming/: Makefile  launch.sh  main.c
client/test/: voxl-server.sh
include/: ObjectDetector.hpp  SNPEPipeline.hpp  VideoPipeline.hpp  object_detector.hpp  snpe_pipeline.hpp  video_pipeline.hpp
src/: ObjectDetector.cpp  SNPEPipeline.cpp  VideoPipeline.cpp  object_detector.cpp  snpe_pipeline.cpp  video_pipeline.cpp
